fixed overflow issue cause by gitGraph and some minor layout & ui adjustments

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
 
 .dotted-pattern {
   background-color: #000;
-  opacity: 0.5;
+  opacity: 0.7;
   background-image: radial-gradient(#6c6c6c 0.8px, #000 0.8px);
   background-size: 10px 10px;
 }
